Appointment/force-app/main/default/main/default/objects/Appointment__c/fields/Appointment_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_and_Time__c</fullName>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>