Appointment/force-app/main/default/main/default/objects/Appointment__c/fields/Appointment_Location__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Location__c</fullName>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>