Appointment/force-app/main/default/main/default/objects/Appointment__c/fields/Appointment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Reason__c</fullName>
    <label>Appointment Reason</label>
    <type>TextArea</type>
</CustomField>