Appointment/force-app/main/default/main/default/objects/Appointment__c/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker</label>
    <referenceTo>Banker__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>